# advent2024

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  build.gradle.kts  pyproject.toml
advent2024/: dbt_project.yml  profiles.yml
advent2024/models/day0/part1/: test.yml
advent2024/models/day0/part2/: model_0_2.sql  test.yml
advent2024/models/day1/part1/: model_1_1.sql  test.yml
advent2024/models/day1/part2/: model_1_2.sql  test.yml
advent2024/models/day2/part1/: model_2_1.sql  test.yml
advent2024/models/day2/part2/: model_2_2.sql  test.yml
advent2024/seeds/fixtures/day1/: input_1.csv  test_input_1_2.csv
advent2024/seeds/fixtures/day2/: input_2.csv  test_input_2_2.csv
cli/: gen_day.sh  main.py
src/: Day01.kt  Day02.kt  Day03.kt  Day04.kt  Day05.kt  Utils.kt
