[project]
name = "advent2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt-core>=1.8.9",
    "dbt-duckdb>=1.9.0",
    "duckdb>=1.1.3",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = ["pre-commit>=4.0.1", "sqlfmt>=0.0.3"]

[project.scripts]
aoc = "cli.main:cli"

[tool.sqlfmt]
line_length = 100
verbose = true
exclude = ["advent2024/target/**/*", "advent2024/dbt_packages/**/*"]
no_jinjafmt = false
fast = true
single_process = false
encoding = 'utf-8'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli"]
